--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://saurabh-945798.github.io/COLDROCK",
+  "homepage": "https://saurabh-945798.github.io/cafe",
   
   "name": "myqr",
   
